--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,23 @@
-services:
-  db:
-    image: postgres:13.1-alpine
-    restart: always
-    volumes:
-      - db-data:${DB_DATA_DIR}
-    environment:
-      - PGDATA=${DB_DATA_DIR}
-      - POSTGRES_DB=${DB_NAME}
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
+version: '3.7'
 
+services:
   metabase:
     image: metabase/metabase:latest
-    restart: always
-    environment:
-      MB_DB_TYPE: "postgres"
-      MB_DB_DBNAME: "${DB_NAME}"
-      MB_DB_PORT: "5432"
-      MB_DB_USER: "${DB_USER}"
-      MB_DB_PASS: "${DB_PASSWORD}"
-      MB_DB_HOST: "db"
-      MB_PASSWORD_COMPLEXITY: strong
-      MB_PASSWORD_LENGTH: 10
-      JAVA_TIMEZONE: "${MB_JAVA_TIMEZONE}"
+    container_name: metabase
     ports:
-      - 127.0.0.1:${MB_PORT}:3000
-    extra_hosts:
-      - host.docker.internal:host-gateway
-    networks:
-      default:
-        ipv4_address: 172.16.200.30
-    depends_on:
-      - db
-
-networks:
-  default:
-    ipam:
-      driver: default
-      config:
-        - subnet: "172.16.200.0/24"
+      - "3000:3000"
+    volumes:
+      - metabase-data:/metabase-data
+    environment:
+      MB_DB_FILE: /metabase-data/metabase.db
+      # Se precisar configurar mais variáveis de ambiente, adicione aqui.
+      # Exemplo:
+      # MB_DB_TYPE: postgres
+      # MB_DB_DBNAME: metabase
+      # MB_DB_PORT: 5432
+      # MB_DB_USER: username
+      # MB_DB_PASS: password
+      # MB_DB_HOST: db
 
 volumes:
-  db-data:
+  metabase-data:
